# meds-torch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  femr_demo.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  publish-to-pypi.yml  tests.yaml
BENCHMARK/: README.MD  benchmark.sh
MIMICIV_INDUCTIVE_EXPERIMENTS/: README.MD  bimodal.sh  launch_ar_finetune.sh  launch_ar_pretrain.sh  launch_finetune.sh  launch_multi_window_pretrain.sh  launch_pretrain.sh  launch_supervised.sh  launch_transfer_learning.sh
MIMICIV_INDUCTIVE_EXPERIMENTS/configs/: eic_config.yaml  joblib_runner.yaml  multimodal_triplet_config.yaml  triplet_config.yaml
MIMICIV_TUTORIAL/: README.MD  eic_config.yaml  eic_tokenize.sh  generate_ebcl_windows.py  launch_tune_jobs.sh  meds_extract.sh  post_meds_extract.sh  triplet_config.yaml  triplet_tokenize.sh
MIMICIV_TUTORIAL/configs/: mortality-in_hospital-first_48h.yaml  triplet_config.yaml
MULTIMODAL_TUTORIAL/: README.MD  launch_supervised.sh  meds_extract.sh  pre_MEDS.py  pre_meds_ecg.py  utils.py
MULTIMODAL_TUTORIAL/configs/: ecg_event_configs.yaml  ecg_triplet_config.yaml  pre_meds_ecg.yaml
MULTIMODAL_TUTORIAL/configs/tasks/: README.md
ZERO_SHOT_TUTORIAL/: README.MD  abnormal_lab_inference.sh  abnormal_lab_inference2.sh  generate_future_90d.sh  generate_future_90d_fix.sh  inference_analysis.ipynb  launch_ar_finetune.sh  launch_ar_pretrain.sh  task_generation.ipynb  tokenize.sh
ZERO_SHOT_TUTORIAL/configs/: eic_config.yaml  eic_top_10.yaml  ethos_config.yaml  ethos_top10_config.yaml
ZERO_SHOT_TUTORIAL/configs/experiment/: eic_forecast_mtr.yaml  eic_inference_mtr.yaml  eic_mtr.yaml  eic_top10_forecast_large_mtr.yaml  eic_top10_forecast_mtr.yaml
configs/: config.yaml  eval.yaml  meds_train.yaml  train.yaml  transfer_learning.yaml
configs/callbacks/: default.yaml  ray.yaml
configs/data/: meds_multiwindow_pytorch_dataset.yaml  meds_pytorch_dataset.yaml  mnist.yaml  multiwindow_pytorch_dataset.yaml  pytorch_dataset.yaml
configs/debug/: limit.yaml
configs/experiment/: example.yaml  mimiciv.yaml
configs/hparams_search/: optuna.yaml
configs/input_encoder/: triplet_encoder.yaml
configs/model/: ebcl.yaml  mnist.yaml  ocp.yaml  supervised.yaml  token_forecasting.yaml  value_forecasting.yaml
configs/model/backbone/: default.yaml  lstm.yaml  mamba.yaml  transformer_encoder.yaml  transformer_encoder_attn_avg.yaml
configs/model/input_encoder/: text_observation_encoder.yaml  triplet_prompt_encoder.yaml
configs/paths/: default.yaml
configs/sequence_model/: supervised.yaml
configs/sequence_model/backbone/: default.yaml  lstm.yaml  mamba.yaml  transformer_decoder.yaml  transformer_encoder.yaml  transformer_encoder_attn_avg.yaml
configs/sequence_model/input_encoder/: text_code_encoder.yaml  triplet_encoder.yaml
configs/trainer/: ray.yaml
docs/: README.MD  gen_ref_pages.py  inductive_experiments.md  input_encoding_methods.md  terminology.md  tutorial.md
docs/overrides/: main.html
notebooks/: zero-shot-demo.ipynb
scripts/: EIToken_transform.py  launch_clmbr.py  launch_motor.py  schedule.sh
scripts/trash/tutorial_6/: test.parquet
src/: all_tokens.ipynb
src/MEDS_torch/: clmbr_model.py  embedder.py  pytorch_dataset.py  utils.py
src/MEDS_torch/clmbr/: clmbr_model.py
src/MEDS_torch/configs/: base_model_config.yaml  pytorch_dataset.yaml
src/meds_torch/: EIToken.py  __init__.py  all_is_tokens.py  all_tokens.py  benchmark.py  embedder.py  eval.py  finetune.py  generate_trajectories.py  latest_dir.py  multiwindow_pytorch_dataset.py  predict.py  pytorch_batch.py  pytorch_dataset.py  train.py  transfer_learning.py  tune.py  zero_shot.py
src/meds_torch/configs/: eval.yaml  finetune.yaml  generate_trajectories.yaml  latest_dir.yaml  multiwindow_pytorch_dataset.yaml  predict.yaml  pytorch_dataset.yaml  train.yaml
src/meds_torch/data/: datamodule.py  meds_datamodule.py  mnist_datamodule.py
src/meds_torch/dataset/: ebcl_dataloader.py  ocp_dataloader.py  strats_dataloader.py
src/meds_torch/input_encoder/: README.md  TripletEncoder.py  __init__.py  ecg_triplet_encoder.py  eic_encoder.py  multimodal_triplet_encoder.py  text_encoder.py  textcode_encoder.py  triplet_encoder.py  triplet_prompt_encoder.py
src/meds_torch/model/: gpt_model.py  ocp_model.py  strats_model.py  supervised_model.py
src/meds_torch/models/: __init__.py  base_model.py  bicl.py  ebcl_model.py  eic_forecasting.py  gpt_model.py  mnist_module.py  multimodal_supervised_model.py  ocp_model.py  supervised_model.py  token_forecasting.py  triplet_forecasting.py  utils.py  value_forecasting.py
src/meds_torch/schemas/: generate_analysis_schema.py  predict_schema.py
src/meds_torch/sequence_models/: __init__.py  ebcl_model.py  supervised_model.py
src/meds_torch/utils/: __init__.py  custom_filter_measurements.py  custom_multimodal_normalization.py  custom_multimodal_tokenization.py  custom_normalization.py  custom_scheduler.py  custom_text_normalization.py  custom_text_tensorization.py  custom_text_tokenization.py  custom_time_token.py  custom_tokenization.py  utils.py  (+9 more)
tests/: conftest.py  generate_test_data.py  generate_test_windows.py  test_EIToken.py  test_cli.py  test_clmbr.py  test_configs.py  test_dataloader.py  test_datamodules.py  test_eval.py  test_finetune.py  test_generate_trajectories.py  test_input_encoder.py  test_model.py  test_payal.py  test_predict.py  test_sequence_model.py  test_sweeps.py  test_train.py  test_transfer_learning.py  test_zero_shot.py
tests/helpers/: extract_test_data.py  generate_synthetic_data.py  generate_test_data.py  generate_test_data.sh  generate_test_data_tensors.py  generate_test_windows.py  package_available.py  run_if.py  run_sh_command.py  utils.py
tests/processed/: splits.json
tests/test_data/: code_metadata.parquet  raw_windows.parquet  splits.json
tmp_trainer/checkpoint-60/: config.json  model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
trash/tutorial_4/: test.parquet
tutorials/: EIToken.ipynb
(+2629 files in other folders)
